core/roboconf-core/src/test/resources/configurations/invalid/instanceof-imbricated-invalid-property.instances
instance of vm {
	name: my-vm;
	instance of server {
		name=
	}
}
